# IoT-Wake-Up-Radio

./: 192.168.10.4  192.168.10.4_0  CMakeCache.txt  CMakeLists.txt  IoTClient  IoTClient.cpp  IoTServer  IoTServer.cpp  Makefile  a.out  cmake_install.cmake  test.cpp
